# Axiom

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: routes.py
backend/src/core/: embedder.py  parser.py  scorer.py  security.py
backend/src/db/: vector_store.py
backend/src/models/: schemas.py
backend/tests/: test_gatekeeper.py  test_main.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.test.tsx  App.tsx
qdrant_storage/: raft_state.json
qdrant_storage/collections/upm_knowledge_base/0/: replica_state.json
src/: config.py  main.py
src/core/: scorer.py  security.py
src/db/: qdrant_client.py
src/models/: schemas.py
tests/: test_gatekeeper.py
