[tool.poetry]
name = "axiom"
version = "0.1.0"
description = "Axiom: Green AI Knowledge Governance Engine"
authors = ["Nahasat Nibir <nahasat.nibir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
qdrant-client = "^1.7.0"
spacy = "^3.7.0"
python-multipart = "^0.0.9"
sentence-transformers = "^2.2.2"
pypdf = "^4.0.0"
openai = "^1.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# <--- CRITICAL FOR ASYNC TESTS --->
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"